--- a/rename_file_name.ui
+++ b/rename_file_name.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>780</width>
+    <width>884</width>
     <height>700</height>
    </rect>
   </property>
@@ -25,7 +25,7 @@
   <property name="windowTitle">
    <string>重命名</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_8" stretch="3,3,2">
+  <layout class="QVBoxLayout" name="verticalLayout_8" stretch="1,1,1">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="2,1">
      <item>
@@ -572,7 +572,7 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
-       <layout class="QVBoxLayout" name="referLayout" stretch="2,1">
+       <layout class="QHBoxLayout" name="referLayout" stretch="1,2">
         <item>
          <widget class="QTableWidget" name="referFileListWgt">
           <property name="sizePolicy">
@@ -611,17 +611,17 @@
           </column>
           <column>
            <property name="text">
-            <string>路径次数</string>
-           </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>资源次数</string>
+            <string>引用次数</string>
            </property>
           </column>
           <column>
            <property name="text">
             <string>文件路径</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>最近修改</string>
            </property>
           </column>
          </widget>
@@ -659,17 +659,12 @@
           </column>
           <column>
            <property name="text">
+            <string>修改内容</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
             <string>文件位置</string>
-           </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>旧内容</string>
-           </property>
-          </column>
-          <column>
-           <property name="text">
-            <string>新内容</string>
            </property>
           </column>
          </widget>
