--- a/img.qrc
+++ b/img.qrc
@@ -20,5 +20,6 @@
         <file>qss/psblack/radiobutton_unchecked.png</file>
         <file>qss/psblack/radiobutton_unchecked_disable.png</file>
         <file>qss/icon/markdown-assistant.ico</file>
+        <file>qss/icon/do-not-exist.png</file>
     </qresource>
 </RCC>
