fixed: 添加rename目录判断是否在仓库bug

--- a/rename_file_name.ui
+++ b/rename_file_name.ui
@@ -161,6 +161,9 @@
               <property name="text">
                <string/>
               </property>
+              <property name="readOnly">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
             <item>
@@ -216,6 +219,9 @@
               <property name="text">
                <string/>
               </property>
+              <property name="readOnly">
+               <bool>true</bool>
+              </property>
              </widget>
             </item>
             <item>
@@ -270,6 +276,9 @@
               </property>
               <property name="text">
                <string/>
+              </property>
+              <property name="readOnly">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
