--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -710,7 +710,7 @@
      <x>0</x>
      <y>0</y>
      <width>905</width>
-     <height>21</height>
+     <height>17</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -719,6 +719,7 @@
     </property>
     <addaction name="actionModifySysFile"/>
     <addaction name="separator"/>
+    <addaction name="actionConfdata"/>
     <addaction name="actionModifyConf"/>
     <addaction name="actionOpenConfDir"/>
     <addaction name="actionAddConfFile"/>
@@ -918,6 +919,11 @@
   <action name="actionDelCurrentAssetsDir">
    <property name="text">
     <string>删除当前资源目录</string>
+   </property>
+  </action>
+  <action name="actionConfdata">
+   <property name="text">
+    <string>软件配置</string>
    </property>
   </action>
  </widget>
